--- a/party-planning-front/package.json
+++ b/party-planning-front/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-cli": "^2.9.6",
     "vue-router": "^3.5.2",
     "vuetify": "^2.4.0"
   },
